# fingerscrossed.py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  show_off.py  show_off_fastapi.py  show_off_starlette.py  show_off_structlog.py  show_off_structlog_stdlib.py  sonar-project.properties
.github/workflows/: ci.yaml  pypi-dev-publish.yaml  pypi-publish.yaml
fingerscrossed/: __init__.py  _version.py
tests/: core.py  stdlib.py  structlog.py
